tests/language_modules/04_types/invalid_semantics/invalid_range_bounds.vf
module InvalidRangeBounds

type Percent is Integer range 100..0

end InvalidRangeBounds